notebooks amd compsci

--- a/_notebooks/2023-08-29-basics-of-js.ipynb
+++ b/_notebooks/2023-08-29-basics-of-js.ipynb
@@ -8,9 +8,11 @@
     "title: Basics of Javascript\n",
     "hide: True\n",
     "description: A Tech Talk on how to use javascript\n",
-    "type: ccc\n",
+    "type: hacks\n",
     "permalink: /basics/javascript\n",
     "author: Rohan Juneja\n",
+    "comments: True\n",
+    "courses: {csp: {week: 5} }\n",
     "---"
    ]
   },
@@ -18,7 +20,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "{% include nav_basics.html %}"
+    "{% include nav_basics.html %}\n"
    ]
   },
   {
@@ -510,18 +512,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
-     "languageId": "javascript"
+     "languageId": "html"
     }
    },
    "outputs": [
     {
      "data": {
-      "application/javascript": "\n// Define two variables with cologne-themed values in hours\nconst a = 10; // Eau de Cologne lasts for 10 hours\nconst b = 7;  // Eau de Parfum lasts for 7 hours\n// Compare the variables and log appropriate messages\nif (a > b) {\n  console.log(`Eau de Cologne (a) lasts longer than Eau de Parfum (b)`);\n} else if (b > a) {\n  console.log(`Eau de Parfum (b) lasts longer than Eau de Cologne (a)`);\n} else {\n  console.log(`Both Eau de Cologne (a) and Eau de Parfum (b) last the same amount of time`);\n}\n",
+      "text/html": [
+       "\n",
+       "<label for=\"num1\">Number 1:</label>\n",
+       "<input type=\"text\" id=\"num1\" name=\"num1\" placeholder=\"40\">\n",
+       "\n",
+       "<label for=\"num2\">Number 2:</label>\n",
+       "<input type=\"text\" id=\"num2\" name=\"num2\" placeholder=\"60\">\n",
+       "\n",
+       "<button onclick=\"compareNumbers()\">Compare Numbers</button>\n",
+       "\n",
+       "<p id=\"resultParagraph\"></p>\n",
+       "\n",
+       "<script>\n",
+       "    function compareNumbers() {\n",
+       "        var num1 = parseFloat(document.getElementById(\"num1\").value);\n",
+       "        var num2 = parseFloat(document.getElementById(\"num2\").value);\n",
+       "\n",
+       "        var resultParagraph = document.getElementById(\"resultParagraph\");\n",
+       "    \n",
+       "        if (!isNaN(num1) && !isNaN(num2)) {\n",
+       "        if (num1 > num2) {\n",
+       "            console.log(num1 + \" is greater than \" + num2);\n",
+       "            resultParagraph.textContent = \"Number 1 is greater\";\n",
+       "        } else if (num2 > num1) {\n",
+       "            console.log(\"b is greater\");\n",
+       "            resultParagraph.textContent = \"Number 2 is greater\";\n",
+       "        } else {\n",
+       "            console.log(\"both are equal\");\n",
+       "            resultParagraph.textContent = \"Both numbers are equal\";\n",
+       "        }\n",
+       "        } else {\n",
+       "            console.log(\"Please enter valid numbers in both fields.\");\n",
+       "            resultParagraph.textContent = \"Please enter valid numbers in both fields.\";\n",
+       "        }\n",
+       "}\n",
+       "</script>\n"
+      ],
       "text/plain": [
-       "<IPython.core.display.Javascript object>"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -529,19 +567,42 @@
     }
    ],
    "source": [
-    "%%js\n",
+    "%%html\n",
     "\n",
-    "// Define two variables with cologne-themed values in hours\n",
-    "const a = 10; // Eau de Cologne lasts for 10 hours\n",
-    "const b = 7;  // Eau de Parfum lasts for 7 hours\n",
-    "// Compare the variables and log appropriate messages\n",
-    "if (a > b) {\n",
-    "  console.log(`Eau de Cologne (a) lasts longer than Eau de Parfum (b)`);\n",
-    "} else if (b > a) {\n",
-    "  console.log(`Eau de Parfum (b) lasts longer than Eau de Cologne (a)`);\n",
-    "} else {\n",
-    "  console.log(`Both Eau de Cologne (a) and Eau de Parfum (b) last the same amount of time`);\n",
-    "}"
+    "<label for=\"num1\">Number 1:</label>\n",
+    "<input type=\"text\" id=\"num1\" name=\"num1\" placeholder=\"40\">\n",
+    "\n",
+    "<label for=\"num2\">Number 2:</label>\n",
+    "<input type=\"text\" id=\"num2\" name=\"num2\" placeholder=\"60\">\n",
+    "\n",
+    "<button onclick=\"compareNumbers()\">Compare Numbers</button>\n",
+    "\n",
+    "<p id=\"resultParagraph\"></p>\n",
+    "\n",
+    "<script>\n",
+    "    function compareNumbers() {\n",
+    "        var num1 = parseFloat(document.getElementById(\"num1\").value);\n",
+    "        var num2 = parseFloat(document.getElementById(\"num2\").value);\n",
+    "\n",
+    "        var resultParagraph = document.getElementById(\"resultParagraph\");\n",
+    "    \n",
+    "        if (!isNaN(num1) && !isNaN(num2)) {\n",
+    "        if (num1 > num2) {\n",
+    "            console.log(num1 + \" is greater than \" + num2);\n",
+    "            resultParagraph.textContent = \"Number 1 is greater\";\n",
+    "        } else if (num2 > num1) {\n",
+    "            console.log(\"b is greater\");\n",
+    "            resultParagraph.textContent = \"Number 2 is greater\";\n",
+    "        } else {\n",
+    "            console.log(\"both are equal\");\n",
+    "            resultParagraph.textContent = \"Both numbers are equal\";\n",
+    "        }\n",
+    "        } else {\n",
+    "            console.log(\"Please enter valid numbers in both fields.\");\n",
+    "            resultParagraph.textContent = \"Please enter valid numbers in both fields.\";\n",
+    "        }\n",
+    "}\n",
+    "</script>"
    ]
   }
  ],
@@ -561,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
