--- a/_notebooks/2023-08-30-basics-js-with-html.ipynb
+++ b/_notebooks/2023-08-30-basics-js-with-html.ipynb
@@ -8,9 +8,11 @@
     "title: Using Javascript with HTML DOM\n",
     "hide: True\n",
     "description: A Tech Talk on how javascript can interact with HTML DOM\n",
-    "type: ccc\n",
+    "type: hacks\n",
     "permalink: /basics/dom\n",
     "author: Rohan Juneja\n",
+    "comments: True\n",
+    "courses: {csp: {week: 5} }\n",
     "---"
    ]
   },
@@ -18,7 +20,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "{% include nav_basics.html %}"
+    "{% include nav_basics.html %}\n"
    ]
   },
   {
@@ -45,7 +47,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
    "outputs": [],
    "source": [
     "%%html\n",
@@ -75,7 +81,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
    "outputs": [],
    "source": [
     "%%html\n",
@@ -103,7 +113,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
    "outputs": [],
    "source": [
     "%%html\n",
@@ -132,7 +146,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
    "outputs": [],
    "source": [
     "%%html\n",
@@ -178,7 +196,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
    "outputs": [],
    "source": [
     "%%html\n",
@@ -233,7 +255,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
    "outputs": [],
    "source": [
     "%%html\n",
@@ -280,7 +306,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "html"
+    }
+   },
    "outputs": [],
    "source": [
     "%%html\n",
@@ -341,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -350,9 +380,44 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "<html>\n<head>\n    <title>Button Link Example</title>\n</head>\n<body>\n    <a href=\"https://www.ulta.com/p/luna-rossa-black-eau-de-parfum-xlsImpprod18731053\" id=\"link1\" class=\"button\" target=\"_blank\">Ingredients</a>\n    <a href=\"https://www.fragrantica.com/perfume/Prada/Luna-Rossa-Black-48682.html\" id=\"link2\">prada black scent profile</a>\n    <button id=\"toggleButton\" onclick=\"switchLinks()\">Switch Links</button>\n    <p>Switch Count: <span id=\"switchCount\">0</span></p>\n    <p>Link 1: <span id=\"link1Text\">https://www.ulta.com/p/luna-rossa-black-eau-de-parfum-xlsImpprod18731053</span></p>\n    <p>Link 2: <span id=\"link2Text\">https://www.fragrantica.com/perfume/Prada/Luna-Rossa-Black-48682.html</span></p>\n</body>\n</html>\n<div>\n    <!-- notice how tags can be put INSIDE each other -->\n    <p>Prada introduced Prada Luna Rossa Black to expand its Luna Rossa line, catering to consumers seeking a bold and distinctive fragrance experience. This fragrance is a captivating addition, blending aromatic notes of bergamot and angelica with intense patchouli, creating a unique and sensual scent profile. Prada aimed to offer a sophisticated and mysterious olfactory journey for those who appreciate the brand's commitment to innovation and luxury.\n    </p>\n    <p>\n        <!-- Your image here -->\n    </p>\n    <p>Prada Luna Rossa Black is a versatile fragrance suitable for various occasions, making it perfect for both daytime and evening wear. Its intriguing blend of notes, including bergamot and patchouli, strikes a balance between elegance and intensity, making it a great choice for formal events, romantic evenings, or even everyday use.\n    </p>\n</div>\n<script>\n    var link1 = document.getElementById(\"link1\");\n    var link2 = document.getElementById(\"link2\");\n    var toggleButton = document.getElementById(\"toggleButton\");\n    var toggle = false;\n    var switchCount = 0;\n    function switchLinks() {\n        if (toggle) {\n            // Swap the href attributes back to their original values\n            link1.href = \"https://www.ulta.com/p/luna-rossa-black-eau-de-parfum-xlsImpprod18731053\";\n            link2.href = \"https://www.fragrantica.com/perfume/Prada/Luna-Rossa-Black-48682.html\";\n            toggleButton.textContent = \"Switch Links\";\n            link1.textContent = \"Ingredients\";\n            link2.textContent = \"Prada Black Scent Profile\";\n        } else {\n            // Swap the href attributes\n            var tempHref = link1.href;\n            link1.href = link2.href;\n            link2.href = tempHref;\n            toggleButton.textContent = \"Switch Links\";\n            if (link1.textContent === \"Ingredients\") {\n                link1.textContent = \"Prada Black Scent Profile\";\n                link2.textContent = \"Ingredients\";\n            } else {\n                link1.textContent = \"Ingredients\";\n                link2.textContent = \"Prada Black Scent Profile\";\n            }\n        }\n        toggle = !toggle;\n        // Update the switch count\n        switchCount++;\n        document.getElementById(\"switchCount\").textContent = switchCount;\n        // Update the displayed links\n        document.getElementById(\"link1Text\").textContent = link1.textContent;\n        document.getElementById(\"link2Text\").textContent = link2.textContent;\n    }\n</script>\n",
+      "text/html": [
+       "<!-- html code goes here (make sure to run) -->\n",
+       "\n",
+       "<div class=\"jumbotron\">\n",
+       "    <p text-align=\"center\">\n",
+       "        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quis cum nostrum perferendis pariatur impedit laudantium molestiae perspiciatis? Consequuntur dolores harum velit voluptates in. Voluptatibus qui magnam quis velit voluptate.\n",
+       "    </p>\n",
+       "    <br>\n",
+       "    <button type=\"button\" id=\"button123\">Click Me!</button>\n",
+       "</div>\n",
+       "\n",
+       "<div class=\"jumbotron\">\n",
+       "    <a href=\"https://www.formula1.com\">Formula 1</a>\n",
+       "    <br>\n",
+       "    <a href=\"https://www.mercedesamgf1.com\">Mercedes AMG F1</a>\n",
+       "    <p>\n",
+       "        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque vel est ratione rerum similique ducimus quidem ea, inventore placeat dignissimos beatae laboriosam, exercitationem esse quisquam sapiente sed omnis optio! Explicabo.\n",
+       "    </p>\n",
+       "</div>\n",
+       "\n",
+       "<script>\n",
+       "    document.getElementById('button123').addEventListener('click', function() {\n",
+       "        // Get the two anchor tags\n",
+       "        var anchors = document.querySelectorAll('.jumbotron a');\n",
+       "        var firstLink = anchors[0].getAttribute('href');\n",
+       "        var secondLink = anchors[1].getAttribute('href');\n",
+       "        \n",
+       "        // Switch the href attributes of the two anchor tags\n",
+       "        anchors[0].setAttribute('href', secondLink);\n",
+       "        anchors[1].setAttribute('href', firstLink);\n",
+       "        \n",
+       "        // Change the inner HTML of the top p tag to \"switched!\"\n",
+       "        document.querySelector('.jumbotron p').innerHTML = \"switched!\";\n",
+       "    });\n",
+       "</script>\n"
+      ],
       "text/plain": [
-       "<IPython.core.display.Javascript object>"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -360,66 +425,40 @@
     }
    ],
    "source": [
-    "%%js\n",
-    "<html>\n",
-    "<head>\n",
-    "    <title>Button Link Example</title>\n",
-    "</head>\n",
-    "<body>\n",
-    "    <a href=\"https://www.ulta.com/p/luna-rossa-black-eau-de-parfum-xlsImpprod18731053\" id=\"link1\" class=\"button\" target=\"_blank\">Ingredients</a>\n",
-    "    <a href=\"https://www.fragrantica.com/perfume/Prada/Luna-Rossa-Black-48682.html\" id=\"link2\">prada black scent profile</a>\n",
-    "    <button id=\"toggleButton\" onclick=\"switchLinks()\">Switch Links</button>\n",
-    "    <p>Switch Count: <span id=\"switchCount\">0</span></p>\n",
-    "    <p>Link 1: <span id=\"link1Text\">https://www.ulta.com/p/luna-rossa-black-eau-de-parfum-xlsImpprod18731053</span></p>\n",
-    "    <p>Link 2: <span id=\"link2Text\">https://www.fragrantica.com/perfume/Prada/Luna-Rossa-Black-48682.html</span></p>\n",
-    "</body>\n",
-    "</html>\n",
-    "<div>\n",
-    "    <!-- notice how tags can be put INSIDE each other -->\n",
-    "    <p>Prada introduced Prada Luna Rossa Black to expand its Luna Rossa line, catering to consumers seeking a bold and distinctive fragrance experience. This fragrance is a captivating addition, blending aromatic notes of bergamot and angelica with intense patchouli, creating a unique and sensual scent profile. Prada aimed to offer a sophisticated and mysterious olfactory journey for those who appreciate the brand's commitment to innovation and luxury.\n",
+    "%%html\n",
+    "<!-- html code goes here (make sure to run) -->\n",
+    "\n",
+    "<div class=\"jumbotron\">\n",
+    "    <p text-align=\"center\">\n",
+    "        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quis cum nostrum perferendis pariatur impedit laudantium molestiae perspiciatis? Consequuntur dolores harum velit voluptates in. Voluptatibus qui magnam quis velit voluptate.\n",
     "    </p>\n",
+    "    <br>\n",
+    "    <button type=\"button\" id=\"button123\">Click Me!</button>\n",
+    "</div>\n",
+    "\n",
+    "<div class=\"jumbotron\">\n",
+    "    <a href=\"https://www.formula1.com\">Formula 1</a>\n",
+    "    <br>\n",
+    "    <a href=\"https://www.mercedesamgf1.com\">Mercedes AMG F1</a>\n",
     "    <p>\n",
-    "        <!-- Your image here -->\n",
-    "    </p>\n",
-    "    <p>Prada Luna Rossa Black is a versatile fragrance suitable for various occasions, making it perfect for both daytime and evening wear. Its intriguing blend of notes, including bergamot and patchouli, strikes a balance between elegance and intensity, making it a great choice for formal events, romantic evenings, or even everyday use.\n",
+    "        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque vel est ratione rerum similique ducimus quidem ea, inventore placeat dignissimos beatae laboriosam, exercitationem esse quisquam sapiente sed omnis optio! Explicabo.\n",
     "    </p>\n",
     "</div>\n",
+    "\n",
     "<script>\n",
-    "    var link1 = document.getElementById(\"link1\");\n",
-    "    var link2 = document.getElementById(\"link2\");\n",
-    "    var toggleButton = document.getElementById(\"toggleButton\");\n",
-    "    var toggle = false;\n",
-    "    var switchCount = 0;\n",
-    "    function switchLinks() {\n",
-    "        if (toggle) {\n",
-    "            // Swap the href attributes back to their original values\n",
-    "            link1.href = \"https://www.ulta.com/p/luna-rossa-black-eau-de-parfum-xlsImpprod18731053\";\n",
-    "            link2.href = \"https://www.fragrantica.com/perfume/Prada/Luna-Rossa-Black-48682.html\";\n",
-    "            toggleButton.textContent = \"Switch Links\";\n",
-    "            link1.textContent = \"Ingredients\";\n",
-    "            link2.textContent = \"Prada Black Scent Profile\";\n",
-    "        } else {\n",
-    "            // Swap the href attributes\n",
-    "            var tempHref = link1.href;\n",
-    "            link1.href = link2.href;\n",
-    "            link2.href = tempHref;\n",
-    "            toggleButton.textContent = \"Switch Links\";\n",
-    "            if (link1.textContent === \"Ingredients\") {\n",
-    "                link1.textContent = \"Prada Black Scent Profile\";\n",
-    "                link2.textContent = \"Ingredients\";\n",
-    "            } else {\n",
-    "                link1.textContent = \"Ingredients\";\n",
-    "                link2.textContent = \"Prada Black Scent Profile\";\n",
-    "            }\n",
-    "        }\n",
-    "        toggle = !toggle;\n",
-    "        // Update the switch count\n",
-    "        switchCount++;\n",
-    "        document.getElementById(\"switchCount\").textContent = switchCount;\n",
-    "        // Update the displayed links\n",
-    "        document.getElementById(\"link1Text\").textContent = link1.textContent;\n",
-    "        document.getElementById(\"link2Text\").textContent = link2.textContent;\n",
-    "    }\n",
+    "    document.getElementById('button123').addEventListener('click', function() {\n",
+    "        // Get the two anchor tags\n",
+    "        var anchors = document.querySelectorAll('.jumbotron a');\n",
+    "        var firstLink = anchors[0].getAttribute('href');\n",
+    "        var secondLink = anchors[1].getAttribute('href');\n",
+    "        \n",
+    "        // Switch the href attributes of the two anchor tags\n",
+    "        anchors[0].setAttribute('href', secondLink);\n",
+    "        anchors[1].setAttribute('href', firstLink);\n",
+    "        \n",
+    "        // Change the inner HTML of the top p tag to \"switched!\"\n",
+    "        document.querySelector('.jumbotron p').innerHTML = \"switched!\";\n",
+    "    });\n",
     "</script>"
    ]
   }
@@ -440,7 +479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
