--- a/_notebooks/2023-11-30-Routing-And-Computing.ipynb
+++ b/_notebooks/2023-11-30-Routing-And-Computing.ipynb
@@ -5,11 +5,12 @@
    "metadata": {},
    "source": [
     "---\n",
-    "toc: true\n",
+    "toc: false\n",
     "comments: true\n",
     "layout: post\n",
-    "title: Routing and computing\n",
-    "courses: {compsci: {week: 5}}\n",
+    "title: Routing and Computing\n",
+    "description: Team teach on routing and computing \n",
+    "courses: { csp: {week: 14} }\n",
     "type: hacks\n",
     "---"
    ]
@@ -152,22 +153,6 @@
     "2. A company wants to run a web search engine that will recive and process user requests from a data base. \n",
     "\n",
     "3. A meteorological institute wants to run a high resolution weather solution to predict weather patterns in real time. This simulations will require vast amouts of data from various sources such as satilite imagrey and historical weather data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Distributed because it needs both parralel and sequential"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. sequential\n",
-    "2. distributed\n",
-    "3. parallel\n"
    ]
   }
  ],
