--- a/_notebooks/2023-12-07-Digital-Divide.ipynb
+++ b/_notebooks/2023-12-07-Digital-Divide.ipynb
@@ -5,11 +5,12 @@
    "metadata": {},
    "source": [
     "---\n",
-    "toc: true\n",
-    "comments: true\n",
     "layout: post\n",
-    "title: digital divide\n",
-    "courses: {compsci: {week: 5}}\n",
+    "toc: true\n",
+    "title: Digital Divide Team Teach\n",
+    "description: Abdullah, Anika, Alisha, Sergi, Vance.\n",
+    "courses: { csp: {week: 15} }\n",
+    "categories: []\n",
     "type: hacks\n",
     "---"
    ]
