--- a/_notebooks/2023-12-08-Crowdsourcing.ipynb
+++ b/_notebooks/2023-12-08-Crowdsourcing.ipynb
@@ -5,13 +5,12 @@
    "metadata": {},
    "source": [
     "---\n",
-    "toc: true\n",
     "comments: true\n",
     "layout: post\n",
-    "title: Crowd sourcing\n",
-    "description: team teach Lesson\n",
-    "courses: {compsci: {week: 4}}\n",
-    "type: hacks\n",
+    "title: 5.4 Crowdsourcing\n",
+    "description: Team Teach by Saathvik Gampa, Nitin Balaji, Akshay Nagesh, and Ishan Cornick,\n",
+    "type: hacks \n",
+    "courses: { csp: {week: 16} }\n",
     "---"
    ]
   },
@@ -109,15 +108,6 @@
     "- Cryptocurrency\n",
     "    - Uses much computing power from external people in order to process transactions. This is called \"mining\".\n",
     "- Concert Tickets"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Popcorn hack #3\n",
-    "\n",
-    "What is a day-day represenation of crowd-sourcing?\n"
    ]
   }
  ],
