--- a/_notebooks/2023-12-11-Computing-Bias-Team-Teach.ipynb
+++ b/_notebooks/2023-12-11-Computing-Bias-Team-Teach.ipynb
@@ -10,7 +10,7 @@
     "layout: post\n",
     "title: 5.3 Computing Bias Lesson\n",
     "description: Computing Bias Lesson\n",
-    "courses: {compsci: {week: 4}}\n",
+    "courses: {csp: {week: 16}}\n",
     "type: hacks\n",
     "---"
    ]
@@ -39,7 +39,9 @@
     "A. An email filtering system accurately categorizes emails into spam and non-spam based on a diverse set of features, minimizing false positives and false negatives. <br>\n",
     "B. A navigation app provides real-time traffic updates and alternate routes to users, considering various factors such as traffic volume, road closures, and weather conditions. <br>\n",
     "C. An image recognition algorithm identifies objects in photographs with high accuracy, regardless of the gender, ethnicity, or age of the individuals depicted.<br>\n",
-    "## D. An automated hiring system consistently favors candidates from specific educational institutions and backgrounds, resulting in the exclusion of qualified applicants from diverse backgrounds."
+    "D. An automated hiring system consistently favors candidates from specific educational institutions and backgrounds, resulting in the exclusion of qualified applicants from diverse backgrounds.\n",
+    "\n",
+    "D is the answer"
    ]
   },
   {
@@ -66,7 +68,8 @@
    "source": [
     "## Popcorn Hack #2:\n",
     "An online example of computing bias is when an HP computer’s facial recognition system couldn’t track the face of someone with darker skin. Why is this and what type of bias is it? Do you think it was intentional or unintentional?\n",
-    "Data bias unintentional "
+    "\n",
+    "The bias experienced by an HP computer's facial recognition system, which failed to track the face of someone with darker skin, is a form of algorithmic bias. This unintentional bias arises from imbalances in the training data used to train the system. If the dataset primarily consists of individuals with lighter skin tones, the system may struggle to accurately recognize and track individuals with darker skin tones. It is important to recognize that such biases are not intentionally programmed, but rather a result of flawed or limited training data. Efforts are being made by developers and researchers to address these biases and create more inclusive and fair technologies."
    ]
   },
   {
@@ -89,7 +92,8 @@
     "## Popcorn Hack #3:\n",
     "\n",
     "- What is another scenario of data collection in everyday applications and situations?\n",
-    "- Advertisements intrests "
+    "\n",
+    "GPS navigation apps on smartphones collect data like location, speed, and travel history to provide accurate directions and real-time traffic information. This data is used to improve the app's functionality and enhance the user experience."
    ]
   },
   {
@@ -144,9 +148,14 @@
     "## Homework:\n",
     "Problem: Biased Predictive Policing Algorithm: A city implements a predictive policing algorithm to allocate law enforcement resources more efficiently. \n",
     "However, concerns arise as community members and activists notice that the algorithm appears to disproportionately target certain neighborhoods, leading to over-policing and potential violations of civil rights.\n",
-    "Provide a solution to how this situation can be resolved, and how the computing bias can be removed. Explain which method of mitigation you will use and how it works. \n",
-    "## answer \n",
-    "The method of mitigation I would use is output correction. Since the output is making biased decisions against certain neighborhoods you would need to adjust the outputs about the tarrgeting of certain communities.A way to fix this is to use preprocessing since it would prevent any biases from being formed by analyzing the data before it is outputted.b"
+    "Provide a solution to how this situation can be resolved, and how the computing bias can be removed. Explain which method of mitigation you will use and how it works. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Answer: To fix the issue and make sure the predictive policing system is fair, the best solution is to adjust the algorithm through classifier correction. This means tweaking the settings of the algorithm to deal with biases and make sure all neighborhoods are treated fairly. By doing this, we can reduce the chances of unfairly targeting certain areas, making law enforcement more just and avoiding problems with civil rights. It's like fine-tuning the system to treat everyone equally."
    ]
   }
  ],
