--- a/_notebooks/2023-12-18-Legal-Ethical-Concerns.ipynb
+++ b/_notebooks/2023-12-18-Legal-Ethical-Concerns.ipynb
@@ -8,9 +8,8 @@
     "toc: true\n",
     "comments: true\n",
     "layout: post\n",
-    "title: 5.8 legal and ethical concerns\n",
-    "description: safe computing\n",
-    "courses: {compsci: {week: 6}}\n",
+    "title: 5.5 Legal & Ethical Concerns\n",
+    "courses: {csp: {week: 17}}\n",
     "type: hacks\n",
     "---"
    ]
@@ -156,9 +155,7 @@
     "\n",
     "#### [Google Form (Quiz)](https://docs.google.com/forms/d/e/1FAIpQLSdbVlNG-KRIOsdhpqm9DBcdtxqDefy9GF1qi4kdIWgvH8bbbg/viewform?usp=sf_link)\n",
     "\n",
-    "Don't forget to document what you learned through utterances on this file on your blog.\n",
-    "\n",
-    "Direct-message Tanuj Nimmagadda your Utterances link on Slack."
+    "Don't forget to document what you learned through utterances on this file on your blog."
    ]
   }
  ],
