--- a/_notebooks/2023-12-21-Safe_computing.ipynb
+++ b/_notebooks/2023-12-21-Safe_computing.ipynb
@@ -5,13 +5,13 @@
    "metadata": {},
    "source": [
     "---\n",
-    "toc: true\n",
-    "comments: true\n",
+    "toc: False\n",
     "layout: post\n",
-    "title: 5.6 safe computing\n",
-    "description: safe computing\n",
-    "courses: {compsci: {week: 6}}\n",
-    "type: hacks\n",
+    "hide: False\n",
+    "title: P2 | 5.6 - Safe Computing\n",
+    "description: Team Teach On Safe Computing\n",
+    "courses: {'csp': {'week': 17}}\n",
+    "type: tangibles\n",
     "---"
    ]
   },
@@ -67,8 +67,7 @@
    "metadata": {},
    "source": [
     "### Popcorn Hack #1\n",
-    "What measures can individuals take to better protect their PII in an increasingly interconnected digital world?\n",
-    "airplane mode, strong passwords, and vpn."
+    "What measures can individuals take to better protect their PII in an increasingly interconnected digital world?"
    ]
   },
   {
@@ -136,8 +135,7 @@
     "This way, no matter what, our private keys are not accessible anywhere, and people can only encrypt messages if our public keys are leaked, and not decrypt them.\n",
     "\n",
     "## Popcorn Hack #2\n",
-    "- Let's say we have an encrypted message \"mjqqt\". If the Caesar cipher shifted the letters by 5, what is the original message?\n",
-    "- Hello\n"
+    "- Let's say we have an encrypted message \"mjqqt\". If the Caesar cipher shifted the letters by 5, what is the original message?\n"
    ]
   },
   {
@@ -177,10 +175,7 @@
     "* Routers\n",
     "* Advertisments\n",
     "* Attachements\n",
-    "* Pop ups\n",
-    "* links\n",
-    "* public wifi\n",
-    "* "
+    "* Pop ups"
    ]
   },
   {
