--- a/_notebooks/2024-01-16-Python_Flask.ipynb
+++ b/_notebooks/2024-01-16-Python_Flask.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "---\n",
-    "toc: False\n",
+    "toc: true\n",
+    "comments: true\n",
     "layout: post\n",
-    "hide: false\n",
     "title: P2 | Python/Flask\n",
+    "courses: { csp: {week: 19} }\n",
     "description: Team Teach On Python/Flask\n",
-    "courses: {'compsci': {'week': 15}}\n",
     "type: tangibles\n",
     "---"
    ]
