--- a/_notebooks/2024-01-18-JWT_Implementation.ipynb
+++ b/_notebooks/2024-01-18-JWT_Implementation.ipynb
@@ -9,17 +9,10 @@
     "comments: true\n",
     "layout: post\n",
     "title: Python/Flask JWT Project Implementation Overview\n",
+    "courses: { csp: {week: 19} }\n",
     "description: Team Teach for JWT; Project Backend Implementation\n",
     "type: tangibles\n",
-    "courses: { compsci: {week: 19} }\n",
     "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Python/Flask JWT Project Backend Implementation Overview ([flask_portfolio](https://github.com/nighthawkcoders/flask_portfolio))"
    ]
   },
   {
