--- a/_notebooks/2023-08-28-basics-html.ipynb
+++ b/_notebooks/2023-08-28-basics-html.ipynb
@@ -9,9 +9,11 @@
     "hide: True\n",
     "title: Basics of HTML Guide\n",
     "description: An introduction to basic HTML, and resources to learn more.\n",
-    "type: ccc\n",
+    "type: hacks\n",
     "permalink: /basics/html\n",
     "author: Rohan Juneja\n",
+    "comments: True\n",
+    "courses: {csp: {week: 5} }\n",
     "---"
    ]
   },
@@ -19,7 +21,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "{% include nav_basics.html %}"
+    "{% include nav_basics.html %}\n"
    ]
   },
   {
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "html"
@@ -230,7 +232,7 @@
     "- Below is a wireframe for an HTML element you will create. A wireframe is a rough visual representation of HTML elements on a page and isn't necessarily to scale or have the exact styling that the final HTML will have. Using the syntax above, try to create an HTML snippet that corresponds to the below wireframe.\n",
     "- The \"a tags\" can contain any links that you want\n",
     "\n",
-    "![wireframe for html hacks]({{ site.baseurl }}/images/wireframe.png)"
+    "![wireframe for html hacks]({{ site.baseurl }}https://nighthawkcoders.github.io/teacher/images/wireframe.png)"
    ]
   },
   {
@@ -246,7 +248,24 @@
      "data": {
       "text/html": [
        "\n",
-       "<!-- put your HTML code in this cell, Make sure to press the Run button to see your results below -->\n"
+       "<div class=\"jumbotron\">\n",
+       "    <p text-align=\"center\">\n",
+       "        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quis cum nostrum perferendis pariatur impedit laudantium molestiae perspiciatis? Consequuntur dolores harum velit voluptates in. Voluptatibus qui magnam quis velit voluptate.\n",
+       "    </p>\n",
+       "    <br>\n",
+       "    <button type=\"button\">Click Me!</button>\n",
+       "</div>\n",
+       "\n",
+       "<br>\n",
+       "\n",
+       "<div class=\"jumbotron\">\n",
+       "    <a href=\"https://www.formula1.com\">Formula 1</a>\n",
+       "    <br>\n",
+       "    <a href=\"https://www.mercedesamgf1.com\">Mercedes AMG F1</a>\n",
+       "    <p>\n",
+       "        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque vel est ratione rerum similique ducimus quidem ea, inventore placeat dignissimos beatae laboriosam, exercitationem esse quisquam sapiente sed omnis optio! Explicabo.\n",
+       "    </p>\n",
+       "</div>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -259,22 +278,23 @@
    "source": [
     "%%html\n",
     "\n",
-    "<div>\n",
-    "    <t>About Myself</t>\n",
-    "    <p>Hello my name is Dante Atanassov. I am 15 years old, go to Del Norte High, and I enjoy playing soccer.Here are more facts about me:</p>\n",
-    "    <strong>This is a link to my favorite cologne if you want to know how good i smell. </strong>\n",
-    "    <a href=\"https://www.fragrantica.com/perfume/Prada/Luna-Rossa-Black-48682.html\">\n",
-    "        <button>Cologne</button>\n",
-    "    </a>\n",
+    "<div class=\"jumbotron\">\n",
+    "    <p text-align=\"center\">\n",
+    "        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis quis cum nostrum perferendis pariatur impedit laudantium molestiae perspiciatis? Consequuntur dolores harum velit voluptates in. Voluptatibus qui magnam quis velit voluptate.\n",
+    "    </p>\n",
+    "    <br>\n",
+    "    <button type=\"button\">Click Me!</button>\n",
     "</div>\n",
+    "\n",
     "<br>\n",
-    "<br>\n",
-    "<div>\n",
-    "    <h3>Here are my passions</h3>\n",
-    "    <a href = \"https://www.sdscsurf.com/\"> Soccer</a>\n",
-    "    <h3>Here is my instagram</h3>\n",
-    "    <a href = \"https://www.instagram.com/danteatanassov/\">Instagram</a>\n",
-    "    <p> Right now for my passion project I want to it to be a website where you put in 5 fragrance notes and the computer gives you the cologne that best matches your selection</p>\n",
+    "\n",
+    "<div class=\"jumbotron\">\n",
+    "    <a href=\"https://www.formula1.com\">Formula 1</a>\n",
+    "    <br>\n",
+    "    <a href=\"https://www.mercedesamgf1.com\">Mercedes AMG F1</a>\n",
+    "    <p>\n",
+    "        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque vel est ratione rerum similique ducimus quidem ea, inventore placeat dignissimos beatae laboriosam, exercitationem esse quisquam sapiente sed omnis optio! Explicabo.\n",
+    "    </p>\n",
     "</div>"
    ]
   }
@@ -295,7 +315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
