--- a/_notebooks/2023-09-20-1_4-js-errors.ipynb
+++ b/_notebooks/2023-09-20-1_4-js-errors.ipynb
@@ -8,15 +8,16 @@
     "layout: post\n",
     "title: 1.4 Correcting errors\n",
     "description: Practice with identifying and correcting code blocks\n",
-    "type: ccc\n",
+    "type: hacks\n",
     "author: Safin Singh and Rohan Juneja\n",
     "permalink: /basics/js-debug\n",
-    "hide: True\n",
+    "comments: True\n",
+    "courses: {csp: {week: 5} }\n",
     "---"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "{% include nav_basics.html %}"
@@ -61,15 +62,27 @@
    "execution_count": 1,
    "metadata": {
     "vscode": {
-     "languageId": "javascript"
+     "languageId": "html"
     }
    },
    "outputs": [
     {
      "data": {
-      "application/javascript": "\nvar alphabet = \"abcdefghijklmnopqrstuvwxyz\";\nvar alphabetList = [];\n\nfor (var i = 0; i < 26; i++) {\n\talphabetList.push(alphabet[i]);\n}\n\nconsole.log(alphabetList);\n",
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "var alphabet = \"abcdefghijklmnopqrstuvwxyz\";\n",
+       "var alphabetList = [];\n",
+       "\n",
+       "for (var i = 0; i < 10; i++) {\n",
+       "\talphabetList.push(alphabet[i]);\n",
+       "}\n",
+       "\n",
+       "console.log(alphabetList);\n",
+       "</script>\n"
+      ],
       "text/plain": [
-       "<IPython.core.display.Javascript object>"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
@@ -77,16 +90,18 @@
     }
    ],
    "source": [
-    "%%js\n",
+    "%%html\n",
     "\n",
+    "<script>\n",
     "var alphabet = \"abcdefghijklmnopqrstuvwxyz\";\n",
     "var alphabetList = [];\n",
     "\n",
-    "for (var i = 0; i < 26; i++) {\n",
+    "for (var i = 0; i < 10; i++) {\n",
     "\talphabetList.push(alphabet[i]);\n",
     "}\n",
     "\n",
-    "console.log(alphabetList);"
+    "console.log(alphabetList);\n",
+    "</script>"
    ]
   },
   {
@@ -95,7 +110,7 @@
    "source": [
     "### What I Changed\n",
     "\n",
-    "To fix this code, I replaced the loop's condition from i < 10 to i < 26 to ensure that it iterates through all the letters of the alphabet. Additionally, I replaced alphabetList.push(i) with alphabetList.push(alphabet[i]) to populate the alphabetList array with letters from the alphabet string instead of numbers."
+    "I changed instead of having i being pushed into the list, we index the letter using its index from i."
    ]
   },
   {
@@ -116,28 +131,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
-     "languageId": "javascript"
+     "languageId": "html"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "// Copy your previous code to built alphabetList here\n",
+       "var alphabet = \"abcdefghijklmnopqrstuvwxyz\";\n",
+       "var alphabetList = [];\n",
+       "\n",
+       "for (var i = 0; i < 10; i++) {\n",
+       "\talphabetList.push(alphabet[i]);\n",
+       "}\n",
+       "\n",
+       "console.log(alphabetList);\n",
+       "\n",
+       "let letterNumber = 4\n",
+       "\n",
+       "for (var i = 0; i < alphabetList.length; i++) {\n",
+       "\tif (i === letterNumber) {\n",
+       "\t\tconsole.log(alphabetList[letterNumber] + \" is letter number \" + (letterNumber+1) + \"in the alphabet\")\n",
+       "\t}\n",
+       "}\n",
+       "\n",
+       "// Should output:\n",
+       "// \"e\" is letter number 5 in the alphabet\n",
+       "\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "%%js\n",
+    "%%html\n",
     "\n",
+    "<script>\n",
     "// Copy your previous code to built alphabetList here\n",
+    "var alphabet = \"abcdefghijklmnopqrstuvwxyz\";\n",
+    "var alphabetList = [];\n",
     "\n",
-    "let letterNumber = 5;\n",
-    "for (let i = 0; i < alphabetList.length; i++) {\n",
-    "\tif (i + 1 === letterNumber) {\n",
-    "\t\tconsole.log(alphabetList[i] + \" is letter number \" + letterNumber + \" in the alphabet\");\n",
-    "\t\tbreak; // Added a break to exit the loop once the desired letter is found\n",
+    "for (var i = 0; i < 10; i++) {\n",
+    "\talphabetList.push(alphabet[i]);\n",
+    "}\n",
+    "\n",
+    "console.log(alphabetList);\n",
+    "\n",
+    "let letterNumber = 4\n",
+    "\n",
+    "for (var i = 0; i < alphabetList.length; i++) {\n",
+    "\tif (i === letterNumber) {\n",
+    "\t\tconsole.log(alphabetList[letterNumber] + \" is letter number \" + (letterNumber+1) + \"in the alphabet\")\n",
     "\t}\n",
     "}\n",
     "\n",
     "// Should output:\n",
-    "// \"e\" is letter number 5 in the alphabet"
+    "// \"e\" is letter number 5 in the alphabet\n",
+    "\n",
+    "</script>"
    ]
   },
   {
@@ -146,11 +208,7 @@
    "source": [
     "### What I Changed\n",
     "\n",
-    "I made the following changes:\n",
-    "1. Changed the loop condition to i < alphabetList.length to iterate through the letters in the alphabetList array.\n",
-    "2. Used alphabetList[i] to access the letter at the current index.\n",
-    "3. Added a break statement to exit the loop once the desired letter is found.\n",
-    "4. Updated the console.log statement to display the correct letter and its position in the alphabet."
+    "I added my original list and changed letternumber to 4. I also changed the condition to alphabetList.length. I also changed the console.log to alphabetList[letterNumber] + \" is letter number \" + (letterNumber+1) + \"in the alphabet\""
    ]
   },
   {
@@ -166,23 +224,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
-     "languageId": "javascript"
+     "languageId": "html"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "let odds = [];\n",
+       "let i1 = 1;\n",
+       "\n",
+       "while (i1 <= 10) {\n",
+       "  odds.push(i1);\n",
+       "  i1 += 2;\n",
+       "}\n",
+       "\n",
+       "console.log(odds);\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "%%js\n",
+    "%%html\n",
     "\n",
+    "<script>\n",
     "let odds = [];\n",
-    "let i = 1; // Changed the initial value to 1 to start with the first odd number\n",
-    "while (i < 10) { // Changed the condition to stop before 10\n",
-    "  odds.push(i);\n",
-    "  i += 2; // Increment i by 2 to skip even numbers\n",
+    "let i1 = 1;\n",
+    "\n",
+    "while (i1 <= 10) {\n",
+    "  odds.push(i1);\n",
+    "  i1 += 2;\n",
     "}\n",
-    "console.log(odds); // Printing the list of odd numbers"
+    "\n",
+    "console.log(odds);\n",
+    "</script>"
    ]
   },
   {
@@ -191,10 +277,7 @@
    "source": [
     "### What I Changed\n",
     "\n",
-    "Changed the variable name from evens to odds to reflect the intended behavior.\n",
-    "Changed the initial value of i to 1 to start with the first odd number.\n",
-    "Modified the loop condition to stop before reaching 10.\n",
-    "Incremented i by 2 in each iteration to skip even numbers, ensuring only odd numbers are pushed into the odds array."
+    "I changed the list to odds and changed to i to 1. Then it ouputs the odd numnbers."
    ]
   },
   {
@@ -215,31 +298,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
-     "languageId": "javascript"
+     "languageId": "html"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "var newNumbers = [];\n",
+       "\n",
+       "for (var i = 1; i <= 100; i++) {\n",
+       "    if (i % 5 === 0 || i % 2 === 0) {\n",
+       "        newNumbers.push(i);\n",
+       "    }\n",
+       "}\n",
+       "\n",
+       "console.log(newNumbers);\n",
+       "</script>\n",
+       "\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "%%js\n",
+    "%%html\n",
     "\n",
-    "var numbers = []\n",
-    "var newNumbers = []\n",
-    "var i = 0\n",
+    "<script>\n",
+    "var newNumbers = [];\n",
     "\n",
-    "while (i < 100) {\n",
-    "    numbers.push(i)\n",
-    "    i += 1\n",
+    "for (var i = 1; i <= 100; i++) {\n",
+    "    if (i % 5 === 0 || i % 2 === 0) {\n",
+    "        newNumbers.push(i);\n",
+    "    }\n",
     "}\n",
-    "for (var i of numbers) {\n",
-    "    if (numbers[i] % 5 === 0)\n",
-    "        newNumbers.push(numbers[i])\n",
-    "    if (numbers[i] % 2 === 0)\n",
-    "        newNumbers.push(numbers[i])\n",
-    "}\n",
-    "console.log(newNumbers) \n",
+    "\n",
+    "console.log(newNumbers);\n",
+    "</script>\n",
     "\n"
    ]
   },
@@ -264,31 +368,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
-     "languageId": "javascript"
+     "languageId": "html"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<script>\n",
+       "var menu = {\n",
+       "    \"burger\": 3.99,\n",
+       "    \"fries\": 1.99,\n",
+       "    \"drink\": 0.99\n",
+       "};\n",
+       "\n",
+       "var selectedItems = []; \n",
+       "\n",
+       "// Show the user the menu and prompt them to select items\n",
+       "console.log(\"Menu\");\n",
+       "for (var item in menu) {\n",
+       "    console.log(item + \"  $\" + menu[item].toFixed(2));\n",
+       "}\n",
+       "\n",
+       "// Simulate user selecting items\n",
+       "selectedItems.push(\"burger\"); // User selects a burger\n",
+       "selectedItems.push(\"fries\");  // User selects fries\n",
+       "selectedItems.push(\"drink\");  // User selects a drink\n",
+       "\n",
+       "// Calculate the total cost based on selected items\n",
+       "var total = 0;\n",
+       "for (var i = 0; i < selectedItems.length; i++) {\n",
+       "    var selectedItem = selectedItems[i];\n",
+       "    if (menu[selectedItem]) {\n",
+       "        total += menu[selectedItem];\n",
+       "    }\n",
+       "}\n",
+       "\n",
+       "console.log(\"Total: $\" + total.toFixed(2)); // Display the total cost\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "%%js\n",
+    "%%html\n",
     "\n",
-    "var menu =  {\"burger\": 3.99,\n",
-    "         \"fries\": 1.99,\n",
-    "         \"drink\": 0.99}\n",
-    "var total = 0\n",
+    "<script>\n",
+    "var menu = {\n",
+    "    \"burger\": 3.99,\n",
+    "    \"fries\": 1.99,\n",
+    "    \"drink\": 0.99\n",
+    "};\n",
     "\n",
-    "//shows the user the menu and prompts them to select an item\n",
-    "console.log(\"Menu\")\n",
+    "var selectedItems = []; \n",
+    "\n",
+    "// Show the user the menu and prompt them to select items\n",
+    "console.log(\"Menu\");\n",
     "for (var item in menu) {\n",
-    "    console.log(item + \"  $\" + menu[item].toFixed(2)) //why is toFixed used?\n",
+    "    console.log(item + \"  $\" + menu[item].toFixed(2));\n",
     "}\n",
-    "//ideally the code should support mutliple items\n",
-    "var item = \"burger\"\n",
     "\n",
-    "//code should add the price of the menu items selected by the user \n",
-    "console.log(total)"
+    "// Simulate user selecting items\n",
+    "selectedItems.push(\"burger\"); // User selects a burger\n",
+    "selectedItems.push(\"fries\");  // User selects fries\n",
+    "selectedItems.push(\"drink\");  // User selects a drink\n",
+    "\n",
+    "// Calculate the total cost based on selected items\n",
+    "var total = 0;\n",
+    "for (var i = 0; i < selectedItems.length; i++) {\n",
+    "    var selectedItem = selectedItems[i];\n",
+    "    if (menu[selectedItem]) {\n",
+    "        total += menu[selectedItem];\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "console.log(\"Total: $\" + total.toFixed(2)); // Display the total cost\n",
+    "</script>\n"
    ]
   },
   {
@@ -316,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4,
   "vscode": {
