--- a/_notebooks/2023-11-27-Internet.ipynb
+++ b/_notebooks/2023-11-27-Internet.ipynb
@@ -5,11 +5,12 @@
    "metadata": {},
    "source": [
     "---\n",
-    "toc: true\n",
-    "comments: true\n",
+    "toc: True\n",
+    "comments: True\n",
+    "title: The Internet\n",
     "layout: post\n",
-    "title: internet\n",
-    "courses: {compsci: {week: 4}}\n",
+    "description: Exploring the Internet\n",
+    "courses: {'csp': {'week': 13}}\n",
     "type: hacks\n",
     "---"
    ]
