--- a/_notebooks/2024-01-24-login.ipynb
+++ b/_notebooks/2024-01-24-login.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "---\n",
     "title: Login/Signup\n",
-    "courses: {'compsci': {'week': 6}}\n",
+    "courses: {'csp': {'week': 20}}\n",
     "type: tangibles\n",
-    "layout: base\n",
+    "layout: post\n",
     "---"
    ]
   },
